--- a/mLe_pages/mLe_BLOG.html
+++ b/mLe_pages/mLe_BLOG.html
@@ -1,146 +1,24 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/mLeSTYLE.css">
+    <link rel="stylesheet" type="text/css" href="../css/blog.css">
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400italic,700,400' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-    <script src="../js/mLeSticky.js" type="text/javascript"></script>
-
 <title>m.L.e. BLOG</title>
 </head>
 <body>
-<div id="masthead">
-    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%;height:auto;margin-bottom:25px;margin-top:15px;">
-</div>
-<nav>
-    <ul class="navList">
-        <li><a href="../mLeDESIGNS.html">Home</a></li>
-        <li><a href="mLe_PORTFOLIO.html">Portfolio</a></li>
-        <li><a href="mLe_ABOUT.html">About</a></li>
-        <li><a href="mLe_BLOG.html">Blog</a></li>
-        <li><a href="mLe_SAMPLE.html">Sample</a></li>
-        <li><a href="mLe_PROJECT.html">Project</a></li>
-        <li><a href="mLe_CONTACT.html">Contact</a></li>
-    </ul>
-</nav>
+    <a href="../mLeDESIGNS.html"><img src="../assets/ImageLibrary/mLeLogo.svg" alt="m.L.e. DESIGNS" style="position:absolute;right:2%;top:1%;width:10%;height:auto;float:right;z-index:50;"></a>
+<img id="overlay" src="../assets/ImageLibrary/blogHeadMask.svg" alt="Emily's Blog">
+<video id="video" autoplay="autoplay" preload="auto" loop="loop"><source src="../video/ban.mp4" type="video/mp4"></video>
+  
 
-
-<p>This is a paragraph.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ultrices est sem, sit
-    amet feugiat quam feugiat pellentesque. Pellentesque vitae justo in turpis ultrices suscipit
-    id quis tortor. Vestibulum arcu lacus, luctus eget tortor ut, lobortis laoreet nunc. Donec
-    vitae vulputate arcu, ac tincidunt erat.Vivamus quis libero dolor. Praesent tempor lacinia
-    tortor, ut lacinia purus efficitur quis. Maecenas consequat placerat turpis, non gravida
-    massa ornare ac. Ut eget metus vehicula, euismod magna at, sagittis quam. Vivamus finibus
-    facilisis mauris, sit amet mollis odio venenatis eget. Praesent velit tortor, tristique quis
-    viverra et, sodales et nisi. Donec posuere elit id tellus ornare convallis. Nulla odio
-    turpis, tempor in aliquam in, volutpat eget est.<br>Mauris placerat nisl in nunc
-    venenatis bibendum. Fusce faucibus posuere eros. Aliquam aliquet nisl sed velit finibus
-    tristique. Sed sit amet erat quis nunc rhoncus convallis. Pellentesque a quam at arcu
-    semper vulputate. Fusce dictum odio non tellus egestas dictum. Sed in libero at est
-    consequat feugiat. Quisque pulvinar orci ac bibendum finibus. Suspendisse ullamcorper
-    ultricies eros, et mollis nibh faucibus ut. Donec sed bibendum quam, eu feugiat dolor.
-    Integer ac finibus tortor. Quisque sapien orci, pellentesque a odio ut, sagittis tincidunt
-    metus.</p>
-</body>
+<h1>This is a Header.</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget vestibulum dui. Vestibulum condimentum sollicitudin viverra. Nam ultricies purus sit amet ex volutpat, id accumsan arcu euismod. Donec nunc elit, porttitor egestas viverra finibus, molestie sed est. Phasellus eu condimentum augue. Sed pretium convallis massa id hendrerit. Suspendisse nec sapien ac nisl luctus consequat. Duis faucibus eu sapien quis auctor. Curabitur lorem lectus, hendrerit a malesuada sit amet, rutrum bibendum diam. Vivamus id placerat eros, sit amet ultrices mi. Sed eget viverra tortor, at tempor turpis. Donec gravida justo nec ultrices gravida. Etiam nec nibh et nisl dignissim semper. Donec tincidunt consequat dolor ac rutrum. Donec eget pellentesque quam.</p>
+<p>Fusce hendrerit euismod lacinia. In congue quam eget metus molestie, ut dictum felis vehicula. Aenean elementum convallis ornare. Aenean laoreet faucibus ligula, vel elementum lectus imperdiet ac. Etiam pellentesque diam id blandit iaculis. Sed fringilla dolor in nisl pharetra, et elementum felis molestie. Aenean id viverra dolor, ut rhoncus augue. Pellentesque hendrerit iaculis sodales. Praesent sodales eget mi nec ullamcorper. Quisque eu leo sit amet dolor ornare congue a nec ex. Mauris placerat semper lacinia. In in dapibus eros. Nam imperdiet sagittis elit. Nulla feugiat semper maximus.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget vestibulum dui. Vestibulum condimentum sollicitudin viverra. Nam ultricies purus sit amet ex volutpat, id accumsan arcu euismod. Donec nunc elit, porttitor egestas viverra finibus, molestie sed est. Phasellus eu condimentum augue. Sed pretium convallis massa id hendrerit. Suspendisse nec sapien ac nisl luctus consequat. Duis faucibus eu sapien quis auctor. Curabitur lorem lectus, hendrerit a malesuada sit amet, rutrum bibendum diam. Vivamus id placerat eros, sit amet ultrices mi. Sed eget viverra tortor, at tempor turpis. Donec gravida justo nec ultrices gravida. Etiam nec nibh et nisl dignissim semper. Donec tincidunt consequat dolor ac rutrum. Donec eget pellentesque quam.</p>
+<p>Fusce hendrerit euismod lacinia. In congue quam eget metus molestie, ut dictum felis vehicula. Aenean elementum convallis ornare. Aenean laoreet faucibus ligula, vel elementum lectus imperdiet ac. Etiam pellentesque diam id blandit iaculis. Sed fringilla dolor in nisl pharetra, et elementum felis molestie. Aenean id viverra dolor, ut rhoncus augue. Pellentesque hendrerit iaculis sodales. Praesent sodales eget mi nec ullamcorper. Quisque eu leo sit amet dolor ornare congue a nec ex. Mauris placerat semper lacinia. In in dapibus eros. Nam imperdiet sagittis elit. Nulla feugiat semper maximus.</p>
+</body>-->
