--- a/mLe_pages/mLe_BLOG.html
+++ b/mLe_pages/mLe_BLOG.html
@@ -13,18 +13,10 @@
 <body>
     <a href="../mLeDESIGNS.html"><img src="../assets/ImageLibrary/mLeLogo.svg" alt="m.L.e. DESIGNS" style="position:absolute;right:2%;top:1%;width:10%;height:auto;float:right;z-index:50;"></a>
 
-<svg viewBox="0 0 1920 352" width="1920px" height="352px" preserveAspectRatio="xMidYMid slice">
-  <defs>
-    <mask id="mask" x="0" y="0" width="100%" height="auto" >
-      <rect x="0" y="0" width="100%" height="auto"/>
-      <text>emily's blog</text>
-    </mask>
-  </defs>
-  <rect x="0" y="0" width="100%" height="auto"/>
-</svg>    
+<img id="overlay" src="../assets/ImageLibrary/blogHeadMask.svg" alt="Emily's Blog">  
       
 <video style="width:100%;height:auto;" autoplay loop>
-  <source src="../video/ban.mp4" type='video/mp4' />
+<!--  <source src="../video/ban.mp4" type='video/mp4' />-->
   <source src="../video/ban.ogg" type='video/ogg; codecs="theora, vorbis"' />
 </video>
   
