--- a/mLe_pages/mLe_BLOG.html
+++ b/mLe_pages/mLe_BLOG.html
@@ -11,6 +11,7 @@
 <title>m.L.e. BLOG</title>
 </head>
 <body>
+<div id="header">
     <a href="../mLeDESIGNS.html"><img src="../assets/ImageLibrary/mLeLogo.svg" alt="m.L.e. DESIGNS" style="position:absolute;right:2%;top:1%;width:10%;height:auto;float:right;z-index:50;"></a>
 
 <img id="overlay" src="../assets/ImageLibrary/blogHeadMask.svg" alt="Emily's Blog">  
@@ -19,7 +20,7 @@
 <!--  <source src="../video/ban.mp4" type='video/mp4' />-->
   <source src="../video/ban.ogg" type='video/ogg; codecs="theora, vorbis"' />
 </video>
-  
+</div>
 
 <h1>This is a Header.</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget vestibulum dui. Vestibulum condimentum sollicitudin viverra. Nam ultricies purus sit amet ex volutpat, id accumsan arcu euismod. Donec nunc elit, porttitor egestas viverra finibus, molestie sed est. Phasellus eu condimentum augue. Sed pretium convallis massa id hendrerit. Suspendisse nec sapien ac nisl luctus consequat. Duis faucibus eu sapien quis auctor. Curabitur lorem lectus, hendrerit a malesuada sit amet, rutrum bibendum diam. Vivamus id placerat eros, sit amet ultrices mi. Sed eget viverra tortor, at tempor turpis. Donec gravida justo nec ultrices gravida. Etiam nec nibh et nisl dignissim semper. Donec tincidunt consequat dolor ac rutrum. Donec eget pellentesque quam.</p>
