--- a/mLe_pages/mLe_ABOUT.html
+++ b/mLe_pages/mLe_ABOUT.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <div id="masthead">
-    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%;height:auto;margin-bottom:25px;margin-top:15px;">
+    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%;height:auto;">
 </div>
 <nav>
     <ul class="navList">
