--- a/mLe_pages/mLe_PORTFOLIO.html
+++ b/mLe_pages/mLe_PORTFOLIO.html
@@ -60,7 +60,7 @@
 </script>
 
 <div id="masthead">
-    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%;height:auto;margin-bottom:25px;margin-top:45px;">
+    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%;height:auto;">
 </div>
 <nav>
     <ul class="navList">
