fixing up the home file

--- a/mLeDESIGNS.html
+++ b/mLeDESIGNS.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-    <head lang="en">
+<html>
+<head lang="en">
 <title>m.L.e. DESIGNS</title>    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" type="text/css" href="css/mLeSTYLE.css">
 
+    <link rel="stylesheet" href="css/mLeSTYLE.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400italic,700,400' rel='stylesheet' type='text/css'>
 
@@ -14,12 +15,12 @@
     <script src="js/mLeSticky.js" type="text/javascript"></script>
 </head>
 <body>
+
 <span id="swap">
-    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="" style="width:100%">
+    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
 </span>
+
 <nav>
-<!--http://stackoverflow.com/questions/5060923/how-to-stretch-html-css-horizontal-navigation-items-evenly-and-fully-across-a/17951253#17951253
-    http://highintegritydesign.com/equally-spaced-variable-width-justified-navigation-links-three-ways/ -->
     <ul class="navList">
         <li><a href="mLeDESIGNS.html">Home</a></li>
         <li><a href="mLe_pages/mLe_PORTFOLIO.html">Portfolio</a></li>
@@ -30,6 +31,7 @@
         <li><a href="mLe_pages/mLe_CONTACT.html">Contact</a></li>
     </ul>
 </nav>
+
 <h1>This is a header!</h1>
 <p>m.L.e. DESIGNS is a single woman design company. I started doing freelance graphic design work while living in Portland, Oregon and have continued after I moved back to my hometown of Kansas City, Missouri. I’ve done work for various start-ups and small businesses, as well as in-house design for larger hospitals and software companies. I’ve a bit of experience with advertising as well.</p>
 <p>Interestingly enough, I still haven’t decided which of these — advertising, in-house and freelance — is my favorite work environment. They’ve all got pros and cons. I think that’s part of the reason I’ve been working to broaden my skills.</p>
