--- a/mLe_pages/mLe_PORTFOLIO.html
+++ b/mLe_pages/mLe_PORTFOLIO.html
@@ -1,47 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
+<title>m.L.e. PORTFOLIO</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" />
 
+    <link rel="stylesheet" href="../css/mLeSTYLE.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="../css/fancyboxCSS.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="../assets/fancybox_source/jquery.fancybox.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="../assets/fancybox_source/helpers/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400italic,700,400' rel='stylesheet' type='text/css'>
 
-    <!-- Add my CSS -->
-    <link rel="stylesheet" href="../css/mLeSTYLE.css" type="text/css" media="screen" />
-
-    <!-- trying to set up small thumbnails below full image in fancybox, http://jsfiddle.net/kevin11189/uZCC6/1270/ -->
     <script src="../js/fancybox.js" type="text/javascript"></script>
-
-    <!-- Add fancybox CSS -->
-    <link rel="stylesheet" href="../css/fancyboxCSS.css" type="text/css" media="screen" />
-
-    <!-- Add jQuery library -->
     <script type="text/javascript" src="../assets/fancybox_source/lib/jquery1.8.3.js"></script>
-
-    <!-- Add jQuery library -->
     <script type="text/javascript" src="../assets/fancybox_source/lib/jquery-1.10.1.min.js"></script>
-
-    <!-- Add mousewheel plugin (this is optional) -->
     <script type="text/javascript" src="../assets/fancybox_source/lib/jquery.mousewheel-3.0.6.pack.js"></script>
-
-    <!-- Add fancyBox -->
-    <link rel="stylesheet" href="../assets/fancybox_source/jquery.fancybox.css" type="text/css" media="screen" />
     <script type="text/javascript" src="../assets/fancybox_source/jquery.fancybox.pack.js"></script>
 
-    <!-- Optionally add helpers - button, thumbnail and/or media -->
     <link rel="stylesheet" href="../assets/fancybox_source/helpers/jquery.fancybox-buttons.css" type="text/css" media="screen" />
     <script type="text/javascript" src="../assets/fancybox_source/helpers/jquery.fancybox-buttons.js"></script>
-
-    <link rel="stylesheet" href="../assets/fancybox_source/helpers/jquery.fancybox-thumbs.css" type="text/css" media="screen" />
     <script type="text/javascript" src="../assets/fancybox_source/helpers/jquery.fancybox-thumbs.js"></script>
 
-    <!--script for sticky nav bar-->
     <script type="text/javascript" src="../js/mLeSticky.js"></script>
 
-    <!--script for resizing thumbnail padding-->
-    <script type="text/javascript" src="../js/resizeThumbs.js"></script>
-
-<title>m.L.e. PORTFOLIO</title>
 </head>
 <body>
 <script type="text/javascript">
@@ -59,9 +41,10 @@
     });
 </script>
 
-<div id="masthead">
-    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS">
-</div>
+<span id="swap">
+    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
+</span>
+
 <nav>
     <ul class="navList">
         <li><a href="../mLeDESIGNS.html">Home</a></li>
