working on code from home, still have issues with masthead swap

--- a/mLe_pages/mLe_PORTFOLIO.html
+++ b/mLe_pages/mLe_PORTFOLIO.html
@@ -35,6 +35,7 @@
                     position: 'bottom'
                 }
             },
+
             nextEffect: 'fade',
             prevEffect: 'fade'
         });
@@ -45,17 +46,19 @@
     <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
 </span>
 
-<nav>
-    <ul class="navList">
-        <li><a href="../mLeDESIGNS.html">Home</a></li>
-        <li><a href="mLe_PORTFOLIO.html">Portfolio</a></li>
-        <li><a href="mLe_ABOUT.html">About</a></li>
-        <li><a href="mLe_BLOG.html">Blog</a></li>
-        <li><a href="mLe_SAMPLE.html">Sample</a></li>
-        <li><a href="mLe_PROJECT.html">Project</a></li>
-        <li><a href="mLe_CONTACT.html">Contact</a></li>
-    </ul>
-</nav>
+<span id="navSwap" class="vertical_menu">
+    <nav>
+        <ul class="navList">
+            <li><a href="../mLeDESIGNS.html">Home</a></li>
+            <li><a href="mLe_PORTFOLIO.html">Portfolio</a></li>
+            <li><a href="mLe_ABOUT.html">About</a></li>
+            <li><a href="mLe_BLOG.html">Blog</a></li>
+            <li><a href="mLe_SAMPLE.html">Sample</a></li>
+            <li><a href="mLe_PROJECT.html">Project</a></li>
+            <li><a href="mLe_CONTACT.html">Contact</a></li>
+        </ul>
+    </nav>
+</span>
 
 <h1>This is my portfolio.</h1>
 <h2>This is a subhead.</h2>
