--- a/mLe_pages/mLe_ABOUT.html
+++ b/mLe_pages/mLe_ABOUT.html
@@ -1,22 +1,25 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html>
 <head lang="en">
+<title>m.L.e. ABOUT ME</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../css/mLeSTYLE.css">
+    <meta name="viewport" content="width=device-width" />
 
+    <link rel="stylesheet" href="css/mLeSTYLE.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400italic,700,400' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-    <script src="../js/mLeSticky.js" type="text/javascript"></script>
-
-<title>m.L.e. ABOUT</title>
+    <script src="js/mLeSticky.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="masthead">
-    <img src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%;height:auto;margin-bottom:25px;margin-top:15px;">
-</div>
+
+<span id="swap">
+    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
+</span>
+
 <nav>
     <ul class="navList">
         <li><a href="../mLeDESIGNS.html">Home</a></li>
