--- a/mLe_pages/mLe_SAMPLE.html
+++ b/mLe_pages/mLe_SAMPLE.html
@@ -1,28 +1,25 @@
-<!DOCTYPE html><html>
+<!DOCTYPE html>
+<html>
 <head lang="en">
+<title>m.L.e. SAMPLE</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width" />
 
-    <link rel="stylesheet" type="text/css" href="../css/mLeSTYLE.css">
-    <!-- stylesheet for small devices -->
-    <link rel="stylesheet" type="text/css" media="only screen and (max-device-width: 480px)" href="../css/mLeSTYLE_small.css">
-
+    <link rel="stylesheet" href="css/mLeSTYLE.css" type="text/css" media="screen" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Gentium+Book+Basic:400italic,700,400' rel='stylesheet' type='text/css'>
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-    <script src="../js/mLeSticky.js" type="text/javascript"></script>
-
-    <!-- responsive design sets viewport at actual size of device, http://tobyho.com/2012/01/25/responsive-web-design/ -->
-    <meta name="viewport" content="width=device-width">
-
-
-<title>m.L.e. SAMPLE</title>
+    <script src="js/mLeSticky.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="masthead">
-</div>
+
+<span id="swap">
+    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
+</span>
+
 <nav>
     <ul class="navList">
         <li><a href="../mLeDESIGNS.html">Home</a></li>
