trying to get mobile vertical navigation, but broke the navigation all together

--- a/mLe_pages/mLe_PORTFOLIO.html
+++ b/mLe_pages/mLe_PORTFOLIO.html
@@ -43,7 +43,7 @@
 </script>
 
 <span id="swap">
-    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
+    <img id="masthead" src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
 </span>
 
 <span id="navSwap" class="vertical_menu">
