--- a/mLe_pages/mLe_CONTACT.html
+++ b/mLe_pages/mLe_CONTACT.html
@@ -17,7 +17,7 @@
 <body>
 
 <span id="swap">
-    <img id="masthead" src="assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
+    <img id="masthead" src="../assets/mLe_GIFnoLoop.gif" alt="m.L.e. DESIGNS" style="width:100%">
 </span>
 
 <nav>
